# easyftp

./: .gitignore  CMakeLists.txt  README.md
blocklib/: CMakeLists.txt
blocklib/include/: Acceptor.h  InetAddress.h  Socket.h  TcpStream.h
blocklib/lib/: Acceptor.cc  InetAddress.cc  Socket.cc  TcpStream.cc
src/: CMakeLists.txt  CommandReply.h  ErrCheck.h  Fileio.cc  Fileio.h  Handler.cc  Handler.h  Interpreter.cc  Interpreter.h
src/client/: CMakeLists.txt  ClientHandler.cc  ClientHandler.h  ClientMain.cc
src/server/: CMakeLists.txt  ServerHandler.cc  ServerHandler.h  ServerMain.cc
test/: test.cc  testsend  testsend.cc
